# 3DViewer

./: CMakeLists.txt  README.md
.devcontainer/: Dockerfile  devcontainer.json
src/: main.cc  model.cc  model.h  obj_parser.cc  obj_parser.h
src/controller/: controller.cc  controller.h  icontroller.h
src/desktop/: desktop.cc  desktop.h  view.cc  view.h  wireframe_controller_widget.cc  wireframe_controller_widget.h  wireframe_widget.cc  wireframe_widget.h
src/model/: model.cc  model.h  model_facade.cc  model_facade.h  obj_parser.cc  obj_parser.h  wireframe.cc  wireframe.h
tests/: model_tests.cc
